AWS-RestAPI-CRUD_with_Layers

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,13 @@
     "strictPropertyInitialization": false,
     "typeRoots": [
       "./node_modules/@types"
-    ]
+    ],
+    "baseUrl": "./",
+    "paths": {
+      "/opt/nodejs/*": [
+        "src/layers/common/nodejs/*"
+      ],
+    }
   },
   "exclude": [
     "node_modules",
