--- a/package.json
+++ b/package.json
@@ -11,16 +11,29 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "aws-cdk": "2.20.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "aws-cdk": "2.20.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "1.132.0",
+    "@aws-cdk/aws-certificatemanager": "1.132.0",
+    "@aws-cdk/aws-cloudfront": "1.132.0",
+    "@aws-cdk/aws-dynamodb": "1.132.0",
+    "@aws-cdk/aws-route53": "1.132.0",
+    "@aws-cdk/aws-route53-patterns": "1.132.0",
+    "@aws-cdk/aws-route53-targets": "1.132.0",
+    "@aws-cdk/aws-s3": "1.132.0",
+    "@aws-cdk/aws-s3-deployment": "1.132.0",
+    "@aws-cdk/core": "1.132.0",
+    "@types/uuid": "^8.3.4",
     "aws-cdk-lib": "2.20.0",
-    "constructs": "^10.0.0"
+    "aws-sdk": "2.1087.0",
+    "constructs": "^10.0.0",
+    "uuid": "^8.3.2"
   }
 }
